--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PORT=5000
+PORT=3000
 MONGODB_URI=mongodb://127.0.0.1:27017  
 DB_NAME=my_app
-# JWT_SECRET = 'HRZHEALTHY'
+JWT_SECRET = 'HRZHEALTHY'
